...
    ///   - callback: function to execute when the button `Save` is hit
    ///   - tak: the TAK object relative to the application and device
    /// - Returns: the `UIAlertController` with a title and a message and four text fields: name, streamId, type and content and a `Save` and `Cancel` button
    func newEventAlert(editing: Bool = false, title: String, message: String?, name: String? = nil, tak: TAK? = nil, callback: @escaping (Json) -> ()) -> UIAlertController {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)

        let submit = UIAlertAction(title: "OK", style: .default, handler: { _ in
            var params: Json = [
                "streamIds": [alert.textFields![0].text ?? ""],
                "type": alert.textFields![1].text ?? "", // Note the new events content can only contain simple types (Int, String, Double, ...)
                "content": alert.textFields![2].text ?? ""
            ]
            
...
        
        alert.addTextField { (textField : UITextField!) -> Void in
            textField.placeholder = "Stream id"
            textField.text = "diary"
            textField.addTarget(alert, action: #selector(alert.textDidChangeInEventEditor), for: .editingChanged)
            textField.clearButtonMode = .whileEditing
            textField.accessibilityIdentifier = "streamIdField"
        }
        alert.addTextField { (textField : UITextField!) -> Void in
            textField.placeholder = "Type"
            textField.text = "note/txt"
            textField.addTarget(alert, action: #selector(alert.textDidChangeInEventEditor), for: .editingChanged)
            textField.clearButtonMode = .whileEditing
            textField.accessibilityIdentifier = "typeField"
        }
        alert.addTextField { (textField : UITextField!) -> Void in
            textField.placeholder = "Content"
            textField.addTarget(alert, action: #selector(alert.textDidChangeInEventEditor), for: .editingChanged)
            textField.clearButtonMode = .whileEditing
            textField.accessibilityIdentifier = "contentField"
        }
        
        alert.textFields?.forEach {
            $0.superview?.backgroundColor = .clear
            $0.superview?.superview?.subviews[0].removeFromSuperview()
        }
...
