...
        service?.info().then { serviceInfo in self.navigationItem.title = serviceInfo.name }
            .catch { _ in self.navigationItem.title = "Last events" }
        navigationItem.largeTitleDisplayMode = .automatic
        
        self.connection?.username()
        .then { username in
            let userButton = UIBarButtonItem(title: username, style: .plain, target: self, action: #selector(self.openUserMenu))
            userButton.accessibilityIdentifier = "userButton"
            self.navigationItem.rightBarButtonItem = userButton
            self.navigationItem.hidesBackButton = true
        }
    }
    
...
